--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
             valiosa informação dos seus dados. Vamos 
             conversar?</p>
             <div class="apresentacao__conteudo__links">
-                <a class="apresentacao__conteudo__links__links" href="https://www.linkedin.com/in/angel-arroyo-208b1a53">LinkedIn</a>
-                <a class="apresentacao__conteudo__links__links" href="https://github.com/Angel-Arroyo-H">GitHub</a>
+                <h2 class="apresentacao__links__subtitulo">Accese minhas redes:</h2>
+                <a class="apresentacao__conteudo__links__links" href="https://www.linkedin.com/in/angel-arroyo-208b1a53">
+                    <img src="./assets/linkedin.png">
+                    LinkedIn
+                </a>
+                <a class="apresentacao__conteudo__links__links" href="https://github.com/Angel-Arroyo-H">
+                    <img src="./assets/github.png">
+                    GitHub
+                </a>
             </div>
             <!--<img src="imagem.png" alt="Foto da Joana Santos programando">-->
         </section>
-        <img loading="lazy" src="https://avatars.githubusercontent.com/u/195226990?v=4" width=500 alt="Foto do Github">
+        <img loading="lazy" src="https://avatars.githubusercontent.com/u/195226990?v=4" width=40% alt="Foto do Github">
     </main>
 </body>
 </html>
+
+<div class="container">
+    <img src="./assets/" alt="imagem de uma montanha">
+</div>
