adiciona e estiliza footer

--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
         </section>
         <img loading="lazy" src="https://avatars.githubusercontent.com/u/195226990?v=4" width=40% alt="Foto do Github">
     </main>
+    <footer class="rodape">
+        <p>Desenvolvido por Angel Arroyo</p>
+    </footer>
 </body>
 </html>
-
-<div class="container">
-    <img src="./assets/" alt="imagem de uma montanha">
-</div>
