Adiciona pagina sobre mim

--- a/sobre_mim.html
+++ b/sobre_mim.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <h1>Sobre mim</h1>
+<body>    
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="sobre_mim.html">Sobre mim</a>
+        </nav>
+    </header>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
+            <p class="apresentacao__conteudo__paragrafo">Olá, tudo bem?</p>
+            <p class="apresentacao__conteudo__paragrafo">Primeiro, obrigado por dedicar uns minutos para saber um pouco mas sobre mim.</p>
+            <p class="apresentacao__conteudo__paragrafo">Sou o Angel, nasci no Perú mas moro no Brasil desde 2015 e estou amando! Gosto muito de conhecimento, meu hobbie é assistir videos de historia, ciencia, fisica e estatística. Sou muito fan de varios canais de youtube que falam sobre, Quantumfracture é Veritasium são meus favoritos. Foi essa procura por conhecimento (e também conhecer as maravilhosas praias do Brasil) que fez eu vir desde tão longe para fazer pós graduação em Estatística na Universidade Federal de Rio de Janeiro.</p>
+            <p class="apresentacao__conteudo__paragrafo">Trabalho elaborando modelos de prevenção de fraude desde 2021, pensar que minha labor ajuda a pessoas a ter maior tranquilidade nas suas vidas é muito satisfatorio.</p>
+            <p class="apresentacao__conteudo__paragrafo">Eu quero no futuro (próximo espero eu) possa compartilhar de forma mais abrangente o que tenho aprendido ao longo de todos esses anos, gosto muito da ideia de passar o conhecimento para frente.</p>
+            <p class="apresentacao__conteudo__paragrafo">Se quiser conversar, sintase a vontade para enviar uma mensagem. Será um prazer conhece-lo.</p>
+        </section>
+        <img loading="lazy" src="https://avatars.githubusercontent.com/u/195226990?v=4" width=40% alt="Foto do Github">
+    </main>
+    <footer class="rodape">
+        <p>Desenvolvido por Angel Arroyo</p>
+    </footer>
 </body>
 </html>
